--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "build": {
         "env": {
-            "HUGO_VERSION": "v0.131.0+extended "
+            "HUGO_VERSION": "0.125.3"
         }
     }
 }
