--- a/config.toml
+++ b/config.toml
@@ -51,4 +51,4 @@ title = "EcoF:re"
     # hidedesignbyline = true
 
     [params.meta]
-        keywords = "some, keywords, for, seo, you, know, google, duckduckgo, and, such"
+        keywords = "founders, entrepreneurs, small business owners, time, money, spend, business, resources"
